Fix baseline alignment

--- a/src/containers/LandingPage/LandingPage.css
+++ b/src/containers/LandingPage/LandingPage.css
@@ -42,7 +42,7 @@
   margin: 0;
 
   @media (--viewportMedium) {
-    padding: 0 30px;
+    padding: 1px 30px 0 30px;
   }
 }
 
